# namex-search

./: README.md
.github/workflows/: importer-cd.yml
documentation/: Building the NameX Solr Environment.md  Deploying NameX Solr.md  README.md  gcp-solr-infra.sh  solr-redeploy.sh  update-solr-base-image.sh
documentation/old-docs/: Building the NameX Solr Environment.md  Deploying NameX Solr.md
namex-solr/: startupscript.txt
namex-solr-api/: pyproject.toml
namex-solr-api/devops/: vaults.gcp.env
namex-solr-api/src/namex_solr_api/models/: solr_synonym_list.py
namex-solr-api/src/namex_solr_api/resources/internal/solr/: __init__.py  reindex.py
namex-solr-importer/: .env.sample  import_data.py  pyproject.toml
namex-solr-importer/devops/: vaults.ocp.env
namex-solr-importer/src/namex_solr_importer/: __init__.py  config.py  oracle.py  version.py
namex-solr-importer/src/namex_solr_importer/services/: __init__.py  base_db.py  lear_db.py  namex_db.py  oracle.py
namex-solr-importer/src/namex_solr_importer/utils/: __init__.py  data_collection.py  data_parsing.py  reindex.py  solr_api.py
namex-solr-importer/tests/unit/: conftest.py  test_import_data.py
